cmake_minimum_required(VERSION 3.17)
project(SipmleTest)

set(CMAKE_CXX_STANDARD 14)

add_executable(SipmleTest YangHuiTriangle.cpp Factorial.cpp SubStringCounter.cpp Calculator.cpp Count9.cpp CompleteNumber.cpp ParseInt.cpp ToString.cpp ReverseParagraph.cpp DataDefinition.cpp MaxIntegerInString.cpp DecToHex.cpp JosephusProblem.cpp)