cmake_minimum_required(VERSION 3.17)
project(SimpleTest)

set(CMAKE_CXX_STANDARD 14)

add_executable(SimpleTest YangHuiTriangle.cpp Factorial.cpp SubStringCounter.cpp Calculator.cpp Count9.cpp ParseInt.cpp ToString.cpp ReverseParagraph.cpp DataDefinition.cpp MaxIntegerInString.cpp DecToHex.cpp JosephusProblem.cpp FindLegalFrame.cpp FunctionPointer.cpp DeleteTheLeastCharacters.cpp ReadWriteHelloWorld.cpp FileCopy.cpp)